# Gradient-Free-Optimizers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-reminder.yml  tests.yml  tests_macos.yml  tests_ubuntu.yml  tests_windows.yml
derivative_free_optimizers/: base_optimizer.py  surrogate_models.py
derivative_free_optimizers/local/: downhill_simplex.py  stochastic_tunneling.py
derivative_free_optimizers/population/: __init__.py  evolution_strategy.py  parallel_tempering.py  particle_swarm_optimization.py
derivative_free_optimizers/random/: __init__.py  random_annealing.py
derivative_free_optimizers/sequence_model/: bayesian_optimization.py  sbom.py
docs/: Makefile  _plot_search_path___.py  create_search_path_gifs.py  requirements.txt  search_path_gif.py
docs/plot_convergence/: create_convergence_data.py  create_convergence_plots.py
docs/plot_performance/: create_performance_data.py  create_performance_plots.py
docs/plot_search_path/: create_search_path_gifs.py  create_search_path_plots.py
docs/scripts/: generate_algorithm_flowcharts.py  generate_all_diagrams.py  generate_category_diagrams.py  generate_selection_flowchart.py  generate_smbo_loop.py
docs/search_path_gifs/: create_search_path_gifs.py
docs/source/: about.rst  api_reference.rst  conf.py  examples.rst  faq.rst  get_involved.rst  get_started.rst  index.rst  installation.rst  troubleshooting.rst  user_guide.rst
examples/: _pytorch_optimizer.py  boundary_strategies.py  constrained_optimization.py  convex_function.py  deep_learning.py  fit_gaussian.py  grid_search.py  hill_climbing_v2_example.py  hillclimbing.py  large_search_space.py  machine_learning.py  memory.py  mixed_dimensions.py  non_convex_function.py  random_search.py  scipy_distributions.py
examples/optimization_algorithms/: bayesian_optimization.py  cobyla.py  direct_algorithm.py  downhill_simplex.py  evolution_strategy.py  forest_optimizer.py  grid_search.py  hill_climbing.py  lipschitz_optimization.py  parallel_tempering.py  particle_swarm_optimization.py  pattern_search.py  powells_method.py  random_annealing.py  random_restart_hill_climbing.py  random_search.py  repulsing_hill_climbing_optimizer.py  simulated_annealing.py  spiral_optimization.py  stochastic_hill_climbing.py  tree_structured_parzen_estimators.py
gradient_free_optimizers/: __init__.py  base_optimizer.py  base_positioner.py  conv.py  converter.py  high_lvl_api.py  init_positions.py  memory.py  opt_args.py  print_info.py  progress_bar.py  results_manager.py  search.py  search_statistics.py  stop_run.py  times_tracker.py  utils.py
gradient_free_optimizers/local/: __init__.py  hill_climbing_optimizer.py  simulated_annealing.py  stochastic_hill_climbing.py  stochastic_tunneling.py  tabu_search.py
gradient_free_optimizers/optimizers/: __init__.py  base_optimizer.py  core_optimizer.py  search_tracker.py
gradient_free_optimizers/population/: evolution_strategy.py  parallel_tempering.py  particle_swarm_optimization.py
gradient_free_optimizers/random/: random_annealing.py  random_restart_hill_climbing.py  random_search.py
gradient_free_optimizers/sequence_model/: __init__.py  bayesian_optimization.py  decision_tree_optimizer.py  sbom.py  tree_structured_parzen_estimators.py
notebooks/: 01_introduction.ipynb
requirements/: requirements-build.in  requirements-test.in  requirements.in
scripts/: test.sh
src/gradient_free_optimizers/: __init__.py  _ask_tell_mixin.py  _callback.py  _catch.py  _cli_help.py  _dimension_iterator.py  _dimension_types.py  _distributed_search.py  _fitness_mapper.py  _inherit_signature.py  _init_utils.py  _memory.py  _memory_converter.py  _objective_adapter.py  _print_info.py  _progress_bar.py  _result.py  _results_manager.py  _search_params.py  _search_statistics.py  _stop_run.py  _stopping_conditions.py  _times_tracker.py  _trial_result.py  high_lvl_api.py  memory.py  optimizer_search.py  progress_bar.py  search.py  stop_run.py  utils.py
tests/: Bayesian.py  EvolutionStrategy.py  RandomAnnealing.py  StochasticHillClimbing.py  StochasticTunneling.py  TabuSearch.py  _base_test.py  _test_debug.py  _test_examples.py  _test_hyperactive_compatibility.py  _test_memory.py  test_Bayesian.py  test_DecisionTree.py  test_EvolutionStrategy.py  test_HillClimbing.py  test_ParallelTempering.py  test_ParticleSwarm.py  test_RandomAnnealing.py  test_RandomRestartHillClimbing.py  test_RandomSearch.py  test_SimulatedAnnealing.py  test_StochasticHillClimbing.py  test_StochasticTunneling.py  test_TPE.py  test_TabuSearch.py  test_attributes.py  test_converter.py  test_convex_convergence.py  test_early_stop.py  test_examples.py  test_hyperactive_compatibility.py  test_initializers.py  test_issue_15.py  test_max_score.py  test_max_time.py  test_memory.py  test_objective_functions.py  test_optimizers.py  test_random_state.py  test_results.py
tests/local/: _visualize_search_paths.py
tests/local_test_performance/: local_test_global_opt.py  local_test_grid_search.py  local_test_local_opt.py  local_test_pop_opt.py  local_test_smb_opt.py
tests/optimizer_parameter/: Bayesian.py  DecisionTree.py  EvolutionStrategy.py  HillClimbing.py  ParallelTempering.py  ParticleSwarm.py  RandomAnnealing.py  RandomRestartHillClimbing.py  SimulatedAnnealing.py  StochasticHillClimbing.py  StochasticTunneling.py  TPE.py  TabuSearch.py
tests/test_api/: __init__.py  test_api_callbacks.py  test_api_catch.py  test_api_experimental.py  test_api_extended.py  test_api_global.py  test_api_local.py  test_api_population.py  test_api_smb.py
tests/test_ask_tell/: test_api_ask_tell.py  test_ask_tell.py
tests/test_dependencies/: test_backend_c_extension.py  test_backend_pure.py  test_no_numpy.py  test_no_scipy.py  test_no_sklearn.py
tests/test_empty_output/: non_verbose.py  test_empty_output.py  verbose.py
(+668 files in other folders)
