[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gradient-free-optimizers"
version = "1.7.1"
description = "Simple and reliable optimization with local, global, population-based and sequential techniques in numerical discrete search spaces."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["visualization", "data-science"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]

dependencies = [
  "scipy <2.0.0",
  "numpy >=1.18.1, <3.0.0",
  "pandas <3.0.0",
  "scikit-learn >=0.21, !=0.23.*",
  "tqdm >=4.48.0, <5.0.0",
]

[project.optional-dependencies]
build = [
  "setuptools",
  "build",
  "wheel",
]
test = [
  "pytest == 8.4.0",
  "flake8",
  "pytest-cov",
  "surfaces",
]

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Gradient-Free-Optimizers"
"Bug Reports" = "https://github.com/SimonBlanke/Gradient-Free-Optimizers/issues"
"Source" = "https://github.com/SimonBlanke/Gradient-Free-Optimizers/"

